--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,22 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+## macos
+.DS_Store
+
+## AWS SAM
+.aws-sam/
+
+## CloudFormation
+*-parameters.json
+
+## temp
+tmp/
+temp/
+.tmp/
+.temp/
+tmp
+temp
+.tmp
+.temp
